2007-09-26  Paolo Borelli  <pborelli@katamail.com>

	* plugins/filebrowser/gedit-file-browser-store.c: support '.hidden'
	files.

2007-09-26  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/snippets/Document.py: fixed problem with placeholders
	being updated after they are removed

2007-09-25  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac: bump gtk requirement since the previous patch
	depends on a fix present in gtk 2.12.0.

2007-09-25  Paolo Borelli  <pborelli@katamail.com>

        * gedit/dialogs/gedit-search-dialog.c:
        * gedit/gedit-commands-search.c:
        * gedit/gedit-history-entry.c:
        * gedit/gedit-history-entry.h:
        * gedit/gedit-view.c:

	Make sure that the search history stores unescaped text to avoid
	duplication of slashes when picking an escaped item from the history.
	Fixes bug #473987.

        * gedit/dialogs/gedit-open-location-dialog.c:
	do not add empty strings to the history.

2007-09-23  Paolo Borelli  <pborelli@katamail.com>

        * configure.ac: allow to explicitely enable/disable libattr.
        Bug #476615, patch by Daniel Gryniewicz.

2007-09-23  Paolo Borelli  <pborelli@katamail.com>

	* plugins/externaltools/tools/manager.py:
	* plugins/externaltools/tools/library.py:
	* plugins/snippets/snippets/Library.py:
	* plugins/snippets/snippets/Exporter.py:
	* plugins/snippets/snippets/Snippet.py:
	* plugins/snippets/snippets/Placeholder.py:

        Use the more pythonic 'in' operator instead of dict.has_key()

2007-09-21  Paolo Borelli  <pborelli@katamail.com>

        * plugins/spell/gedit-spell-language-dialog.c: fix bug 478975. Patch
        by Alexandros Frantzis.

2007-09-21  Paolo Borelli  <pborelli@katamail.com>

        * plugins/taglist/gedit-taglist-plugin-parser.c: fix parsing error that
        prevented invalid tags from being discarded.
        * plugins/taglist/HTML.tags.xml.in: fix invalid tag. Fixes bug #478175.

2007-09-21  Paolo Borelli  <pborelli@katamail.com>
