@@ -1,5 +1,10 @@
 2007-09-26  Paolo Borelli  <pborelli@katamail.com>
 
+	* plugins/filebrowser/gedit-file-browser-view.c: toggle hidden
+	files with CTRL+h
+
+2007-09-26  Paolo Borelli  <pborelli@katamail.com>
+
 	* plugins/filebrowser/gedit-file-browser-store.c: support '.hidden'
 	files.
 
